--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capitalize",
+  "name": "@ocampoce/capitalize",
   "version": "1.0.0",
   "description": "A helper function in JavaScript for capitalizing first letter in a string and leaving rest letter unchanged.",
   "main": "index.js",
